try change path

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -16,7 +16,7 @@
 </div>
 <!-- Tag Navigation -->
 <div id="tag-wrap">
-  <a href="{{ site.url }}/tags">
+  <a href="{{ site.baseurl }}/tags">
     <p class="title">TAGS</p>
   </a>
   {% for tag in site.tags %}
