find to-top & add to tags

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,7 @@ layout: page
   </section>
 </div>
 
+<!-- to-top button+css+js -->
 <div id="top" class="top-btn" onclick="moveTop()">
   <i class="fas fa-chevron-up"></i>
 </div>
