--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -8,6 +8,7 @@ layout: page
   <ul class="tag-cloud">
     {% for tag in site.tags %}
     <a href="#{{ tag | first | slugize }}">
+      <!-- clicking will bring viewer to the FIRST post under this tag -->
       <!-- bgcolor transparency is proportional to the number of posts under this tag -->
       <li class="tag"
         style="background-color: rgba(86,61,124, {{ tag | last | size | times: 100 | divided_by: site.tags.size | plus: 50 | divided_by: 100.0}})">
@@ -39,3 +40,33 @@ layout: page
   </div>
 
 </div>
+
+
+<!-- to-top button+css+js -->
+<div id="top" class="top-btn" onclick="moveTop()">
+  <i class="fas fa-chevron-up"></i>
+</div>
+<script>
+  var lastScrollTop = 0;
+  window.onscroll = function () {
+    var st = document.body.scrollTop || document.documentElement.scrollTop;
+    if (st > 250) {
+      document.getElementById("top").style.display = "block"
+      if (st > lastScrollTop) {
+        document.getElementById("top").style.opacity = 0
+      } else {
+        document.getElementById("top").style.opacity = 1
+      }
+    } else {
+      document.getElementById("top").style.opacity = 0
+      if (st > lastScrollTop) {
+        document.getElementById("top").style.display = "none"
+      }
+    }
+    lastScrollTop = st <= 0 ? 0 : st;
+  }
+  function moveTop() {
+    document.body.scrollTop = 0
+    document.documentElement.scrollTop = 0
+  }
+</script>
